# studia-pdzd

./: .gitignore  data_explore.py  main.py  przejscie_po_danych.xlsx  pyproject.toml
