[tool.setuptools]
packages = ["main"]
[project]
name = "przetwarzanie-duzych-zbiorow-danych"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2026.2.25",
    "comfy-cli>=1.6.0",
    "openapi-client>=1.1.7",
    "pandas>=3.0.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "urllib3>=2.6.3",
]
